add a basic auth system + log level
