# docs/swagger.json
@@ -365,12 +365,34 @@
                     }
                 }
             }
+        },
+        "/authenticate": {
+            "post": {
+                "description": "Authenticate",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "configuration.Configuration": {
             "type": "object",
             "properties": {
+                "credentials": {
+                    "type": "string"
+                },
                 "dev-mode": {
                     "type": "boolean"
                 },
@@ -380,6 +402,9 @@
                 },
                 "listen-port": {
                     "type": "integer"
+                },
+                "log-level": {
+                    "type": "string"
                 },
                 "redis-server": {
                     "type": "string"
@@ -424,6 +449,9 @@
                 "time"
             ],
             "properties": {
+                "hostname": {
+                    "type": "string"
+                },
                 "output": {
                     "type": "string"
                 },
@@ -447,6 +475,9 @@
                     }
                 },
                 "time": {
+                    "type": "string"
+                },
+                "uuid": {
                     "type": "string"
                 }
             }
