# internal/api/api.go
@@ -1,8 +1,11 @@
 package api
 
 import (
+	"crypto/subtle"
+	"encoding/base64"
 	"fmt"
 	"net/http"
+	"strings"
 
 	"github.com/falcosecurity/falcosidekick-ui/configuration"
 	"github.com/falcosecurity/falcosidekick-ui/internal/events"
@@ -28,17 +31,19 @@ func returnResult(c echo.Context, r models.Results, err error) error {
 // @Accept       json
 // @Produce      json
 // @param        payload  body      models.Payload                  true  "Payload"
-// @Success      200      {string}  string                          ""
-// @Failure      500      {string}  http.StatusInternalServerError  "Internal Server Error"
+// @Success                    200  {string}  string                          ""
+// @Failure                    500  {string}  http.StatusInternalServerError  "Internal Server Error"
 // @Router       /api/v1/ [post]
 func AddEvent(c echo.Context) error {
 	payload := new(models.Payload)
 	if err := c.Bind(payload); err != nil {
 		utils.WriteLog("error", err.Error())
-		err2 := echo.NewHTTPError(http.StatusInternalServerError, err.Error())
-		if err2 != nil {
-			return err
-		}
+		return err
+	}
+
+	if err := c.Validate(payload); err != nil {
+		utils.WriteLog("error", err.Error())
+		return err
 	}
 
 	models.GetOutputs().Update(payload.Outputs)
@@ -65,7 +70,7 @@ func AddEvent(c echo.Context) error {
 // @Router       /api/v1/events/count [get]
 func CountEvent(c echo.Context) error {
 	a := models.GetArguments(c)
-	utils.WriteLog("info", fmt.Sprintf("GET count (source='%v', priority='%v', rule='%v', since='%v', filter='%v', tags='%v')", a.Source, a.Priority, a.Rule, a.Since, a.Filter, a.Tags))
+	utils.WriteLog("debug", fmt.Sprintf("GET count (source='%v', priority='%v', rule='%v', since='%v', filter='%v', tags='%v')", a.Source, a.Priority, a.Rule, a.Since, a.Filter, a.Tags))
 
 	r, err := events.Count(a)
 	return returnResult(c, r, err)
@@ -88,7 +93,7 @@ func CountEvent(c echo.Context) error {
 // @Router       /api/v1/events/count/:groupby [get]
 func CountByEvent(c echo.Context) error {
 	a := models.GetArguments(c)
-	utils.WriteLog("info", fmt.Sprintf("GET count by %v (source='%v', priority='%v', rule='%v', since='%v', filter='%v', tags='%v')", a.GroupBy, a.Source, a.Priority, a.Rule, a.Since, a.Filter, a.Tags))
+	utils.WriteLog("debug", fmt.Sprintf("GET count by %v (source='%v', priority='%v', rule='%v', since='%v', filter='%v', tags='%v')", a.GroupBy, a.Source, a.Priority, a.Rule, a.Since, a.Filter, a.Tags))
 
 	r, err := events.CountBy(a)
 	return returnResult(c, r, err)
@@ -110,7 +115,7 @@ func CountByEvent(c echo.Context) error {
 // @Router       /api/v1/events/search [get]
 func Search(c echo.Context) error {
 	a := models.GetArguments(c)
-	utils.WriteLog("info", fmt.Sprintf("GET search (source='%v', priority='%v', rule='%v', since='%v', filter='%v', tags='%v', page='%v', limit='%v')", a.Source, a.Priority, a.Rule, a.Since, a.Filter, a.Tags, a.Page, a.Limit))
+	utils.WriteLog("debug", fmt.Sprintf("GET search (source='%v', priority='%v', rule='%v', since='%v', filter='%v', tags='%v', page='%v', limit='%v')", a.Source, a.Priority, a.Rule, a.Since, a.Filter, a.Tags, a.Page, a.Limit))
 
 	r, err := events.Search(a)
 	return returnResult(c, r, err)
@@ -137,7 +142,7 @@ func Healthz(c echo.Context) error {
 // @Failure      500  {string}  http.StatusInternalServerError  "Internal Server Error"
 // @Router       /api/v1/outputs [get]
 func GetOutputs(c echo.Context) error {
-	utils.WriteLog("info", "GET outputs")
+	utils.WriteLog("debug", "GET outputs")
 	return c.JSON(http.StatusOK, models.GetOutputs())
 }
 
@@ -149,8 +154,11 @@ func GetOutputs(c echo.Context) error {
 // @Failure      500  {string}  http.StatusInternalServerError  "Internal Server Error"
 // @Router       /api/v1/configuration [get]
 func GetConfiguration(c echo.Context) error {
-	utils.WriteLog("info", "GET config")
-	return c.JSON(http.StatusOK, configuration.GetConfiguration())
+	utils.WriteLog("debug", "GET config")
+	config := configuration.GetConfiguration()
+	obfuscatedConfig := *config
+	obfuscatedConfig.Credentials = strings.Split(config.Credentials, ":")[0] + ":*******"
+	return c.JSON(http.StatusOK, obfuscatedConfig)
 }
 
 // Version
@@ -161,6 +169,40 @@ func GetConfiguration(c echo.Context) error {
 // @Failure      500  {string}  http.StatusInternalServerError  "Internal Server Error"
 // @Router       /api/v1/version [get]
 func GetVersionInfo(c echo.Context) error {
-	utils.WriteLog("info", "GET version")
+	utils.WriteLog("debug", "GET version")
 	return c.JSON(http.StatusOK, configuration.GetVersionInfo())
+}
+
+// @Description                Authenticate
+// @securityDefinitions.basic  BasicAuth
+// @Success      200      {string}  string                          ""
+// @Failure      500      {string}  http.StatusInternalServerError  "Internal Server Error"
+// @Router                     /authenticate [post]
+func Authenticate(c echo.Context) error {
+	authHeader := c.Request().Header["Authorization"]
+	config := configuration.GetConfiguration()
+	if len(authHeader) == 0 {
+		utils.WriteLog("warning", "user '<n/a>' unknown or wrong password")
+		return c.JSON(http.StatusUnauthorized, "unauthorized")
+	}
+	t := strings.Split(authHeader[0], " ")
+	if len(t) != 2 {
+		utils.WriteLog("warning", "user '<n/a>' unknown or wrong password")
+		return c.JSON(http.StatusUnauthorized, "unauthorized")
+	}
+	u, err := base64.StdEncoding.DecodeString(t[1])
+	if err != nil {
+		utils.WriteLog("warning", "user '<n/a>' unknown or wrong password")
+		return c.JSON(http.StatusUnauthorized, "unauthorized")
+	}
+	v := strings.Split(string(u), ":")[0]
+	if subtle.ConstantTimeCompare(
+		u,
+		[]byte(config.Credentials),
+	) == 1 {
+		utils.WriteLog("info", fmt.Sprintf("user '%v' authenticated", v))
+		return c.JSON(http.StatusOK, "authorized")
+	}
+	utils.WriteLog("warning", fmt.Sprintf("user '%v' unknown or wrong password", v))
+	return c.JSON(http.StatusUnauthorized, "unauthorized")
 }
